src/objects/Expedite_Request_Email__c.object
<CustomObject>
    <description>Custom Object for tracking Expedite Request Emails.</description>
    <fields>
        <fullName>Attachment_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to check if email contains attachment or not</description>
        <label>Attachment Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_From__c</fullName>
        <label>Email From:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_To__c</fullName>
        <label>Email To:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_cc__c</fullName>
        <label>Email CC:</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expedite_Request__c</fullName>
        <label>Expedite Request</label>
        <referenceTo>Expedite_Request__c</referenceTo>
        <relationshipLabel>Expedite Request Emails</relationshipLabel>
        <relationshipName>Expedite_Request_Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Inbound_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/apex/ExpediteEmailRequestEdit?EMID=&quot;+ Id +&quot;&amp;retURL=/&quot;+   Expedite_Request__r.Id  
,  Name ,&quot;_parent&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expedite Request Email #</label>
        <type>Text</type>
    </fields>
    <label>Expedite Request Email</label>
    <nameField>
        <displayFormat>ERE-{00000000}</displayFormat>
        <label>Expedite Request Email #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expedite Request Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>